# financial-data-pipeline

./: .gitignore  Apresentacao_linkedin.md  CONTRIBUTING.md  README.md  minhas_acoes.json  portfolio_brasileiro.json  pyproject.toml  vale3_dados.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.ml  main.yml
config/: config.yaml
data/: relatorio_real_20250809_200827.csv
docs/: api.md
src/financial-data-pipeline/extractors/: api_financeira.py  etl_api_py  etl_robusto_windows.py  etl_simples_windows.py  extractor_pandas.py  extrator_simples.py  test_etl_api_real.py
tests/: teste_py
